--- a/README.org
+++ b/README.org
@@ -4,12 +4,9 @@
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://thomasf.github.io/solarized-css/solarized-dark.min.css" />
 * Overview
 [[https://codecov.io/gl/asuran-rs/libasuran][file:https://img.shields.io/codecov/c/gitlab/asuran-rs/libasuran.svg?style=for-the-badge]]
-
-[[file:https://img.shields.io/gitlab/pipeline/asuran-rs/libasuran?style=for-the-badge]] 
-
-[[https://crates.io/crates/libasuran][file:https://img.shields.io/crates/v/libasuran?style=for-the-badge]] 
-
-[[file:https://img.shields.io/crates/l/libasuran?style=for-the-badge]] 
+[[file:https://img.shields.io/gitlab/pipeline/asuran-rs/libasuran.svg?style=for-the-badge]]
+[[https://crates.io/crates/libasuran][file:https://img.shields.io/crates/v/libasuran.svg?style=for-the-badge]]
+[[file:https://img.shields.io/crates/l/libasuran.svg?style=for-the-badge]]
 
 Asuran is a new archive format, and an implementation (in rust) of both a read/write library as well as a command line tool.
 * Features Overview
