--- a/README.org
+++ b/README.org
@@ -3,10 +3,10 @@
 #+INFOJS_OPT: view:t toc:t ltoc:t mouse:underline buttons:0 path:http://thomasf.github.io/solarized-css/org-info.min.js
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://thomasf.github.io/solarized-css/solarized-dark.min.css" />
 * Overview
-[[https://codecov.io/gl/asuran-rs/libasuran][file:https://img.shields.io/codecov/c/gitlab/asuran-rs/libasuran.svg?style=for-the-badge]] 
-[[file:https://img.shields.io/gitlab/pipeline/asuran-rs/libasuran.svg?style=for-the-badge]] 
-[[https://crates.io/crates/libasuran][file:https://img.shields.io/crates/v/libasuran.svg?style=for-the-badge]] 
-[[file:https://img.shields.io/crates/l/libasuran.svg?style=for-the-badge]] 
+[[https://codecov.io/gl/asuran-rs/asuran][file:https://img.shields.io/codecov/c/gitlab/asuran-rs/asuran.svg?style=for-the-badge]] 
+[[file:https://img.shields.io/gitlab/pipeline/asuran-rs/lasuran.svg?style=for-the-badge]] 
+[[https://crates.io/crates/asuran][file:https://img.shields.io/crates/v/asuran.svg?style=for-the-badge]] 
+[[file:https://img.shields.io/crates/l/asuran.svg?style=for-the-badge]] 
 
 Asuran is a new archive format, and an implementation (in rust) of both a read/write library as well as a command line tool.
 * Features Overview
